--- a/code/app/build.gradle
+++ b/code/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "saga.alexwooten.com"
+        applicationId "saga.tek_mak.com"
         minSdkVersion 15
         targetSdkVersion 21
         versionCode 1
